--- a/day5/index.html
+++ b/day5/index.html
@@ -43,7 +43,7 @@
 </main>
 <footer id="footer">
     <p > copyright </p>
-    <a href="mailto:riyajain@gmail.com">mail us></a>
+    <a href="mailto:riyajain@gmail.com">mail us</a>
     <a href="tel:7302335066">contact us</a>
 </footer>
 </body>
