--- a/day6/index.html
+++ b/day6/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> this is a heading content from html</h1>
-    <script src="./letVarConst/outputBasedQuestions"></script>
+    <script src="typeConversion.js"></script>
      
   
 </body>
